# KC-MPU-6050-Pico-Library

./: CMakeLists.txt  README.md  main.cpp
lib/KCMPU6050/: CMakeLists.txt  kcmpu6050.cpp  kcmpu6050.h
